<resources>
    <string name="app_name" translatable="false">Planer</string>
    <string name="app_info">About Planer</string>
    <string name="settings">Settings</string>
    <string name="iserv_base_url_str">Iserv Domain</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="type">Type</string>
    <string name="missing">Missing</string>
    <string name="hour">Hour</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="course">Course</string>
    <string name="lesson">Lesson</string>
    <string name="teacher">Teacher</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact">Contact us</string>
    <string name="preferences">Preferences</string>
    <string name="courses">Courses</string>
    <string name="account_planer_preference">Planer Account</string>
    <string name="account_iserv_preference_title">Iserv Account</string>
    <string name="_class">Class</string>
    <string name="category_general">General</string>
    <string name="category_planer">Planer</string>
    <string name="category_accounts">Accounts</string>
    <string name="category_information">Information</string>
    <string name="account_planer_preference_summary">Class • Courses</string>
    <string name="account_iserv_preference_summary">URL • Username • Password</string>
    <string name="preferences_preference_summary">Theme • Color</string>
    <string name="courses_preference_summary">Select your courses • Available courses in your class</string>
    <string name="not_available_yet">Not available yet!</string>
    <string name="room">Room</string>
    <string name="not_affected">Not Affected</string>
    <string name="iserv_base_url_hint">Example: iserv.kgs-wiesmoor.de</string>
    <string name="tips_card_iserv_account_message">You must enter your Iserv account details for the Planer app to work.</string>
    <string name="tips_card_class_message">You must specify your class so that the plan for your class can be displayed.</string>
    <string name="tips_card_class_title">Set your class</string>
    <string name="iserv_synced_at">Synced with Iserv at %s</string>
    <string name="error_no_internet_access">No internet connection available</string>
    <string name="error_malformed_url">Malformed URL</string>
</resources>